Controller Pro 1.2.0
====================

New Features:
  - Add ability to reset RRD4J graph time axis (Richard Turner, ORCJAVA-452)
  - Improvements to the Russound protocol implementation (Torbjorn Osterdahl, ORCJAVA-461)
  - Add possibility of ReadCommand implementations to define
	  their polling interval (Marcus Redeker, ORCJAVA-464)
  - Update HTTP protocol to extend ReadCommand instead of
	  implementing EventListener (Marcus Redeker, ORCJAVA-465)

Controller Pro 1.1.1
====================

Bug Fixes:

  - Fixed: RRD4J Protocol commands that change the start or end time of a graph also
	  cause the end or start time respectively to be fixed (Richard Turner, ORCJAVA-451)
  - Fixed: Drools exception when executing rules after controller xml has been reloaded (ORCJAVA-407)
  - Decode request path segments (Christian Bauer, ORCJAVA-471)

Controller Pro 1.1.0
====================

New Features:

  - Manage User Credentials in Controller. (Juha Lindfors, ORCJAVA-422)
  - Convert Beehive remote proxy service to blocking I/O (Marcus Redeker, ORCJAVA-411)
  - Clean up and consume input streams from HTTP connections
    in error cases to return connections to HTTP keep-alive
    pool (Juha Lindfors, ORCJAVA-454)

Bug Fixes:

  - Fix broken changes introduced to test suite in 
    mredeker/Controller_2_0_1_Beehive_Proxy branch, as 
    part of ORCJAVA-424  (Juha Lindfors, ORCJAVA-425)
  - Fix an issue with ORCJAVA-411 that used HTTP GET instead
    of HTTP POST for controller MAC address announcement -- 
    used when retrieving controller ID from a remote service
    (Juha Lindfors, ORCJAVA-450)

Controller Pro 1.0.14
=====================

Bug Fixes:

  - Fixed: Shell Execution Protocol does not destroy the spawned process (ORCJAVA-420)
  - Fixed: RRD4J URL Protocol generates incorrect URLs (ORCJAVA-441)

Controller Pro 1.0.13
=====================
	  
New Features:

  - Updated DSC Security System  to support EnvisaLink and improved current IT100 support